--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "type": "module",
   "dependencies": {
     "@supercharge/promise-pool": "^3.2.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/lokijs": "^1.5.14",
     "@types/node": "^22.7.5",
+    "deepmerge": "^4.3.1",
     "express": "^4.21.1",
     "express-xml-bodyparser": "^0.3.0",
     "fast-xml-parser": "^4.5.0",
+    "js-yaml": "^4.1.0",
     "log4js": "^6.9.1",
     "lokijs": "^1.5.12",
     "music-metadata": "^10.5.1",
